# recipe-blog

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py
recipes/: admin.py  models.py  serializers.py  views.py
recipes/migrations/: 0001_initial.py
